GNOME Bugzilla – Bug 688419
gtask: source_object arguments and return values not annotated as GObjects
Last modified: 2012-12-02 06:48:02 UTC
Created attachment 229088 [details] [review] gtask: annotate source_object arguments and return values as GObject For various functions in GTask, the source_object arguments and return values are gpointers, even though (AFAICT) they are supposed to always be GObjects. gpointer is nice for C, but for GObject Introspection and friends it would be good to have them annotated as GObjects.
Comment on attachment 229088 [details] [review] gtask: annotate source_object arguments and return values as GObject yup. thanks