gtask: annotate source_object arguments and return values as GObject

https://bugzilla.gnome.org/show_bug.cgi?id=688419